Text breaks in some screens on the main leaflet buttons. #394 - partially fixes the problem.

--- a/IsraelHiking.Web/sources/common.css
+++ b/IsraelHiking.Web/sources/common.css
@@ -68,10 +68,11 @@ body {
     border-left: 1px solid #ccc !important;
 }
 
-.control-container-item.gutters {
-    padding-left: 12px;
-    padding-right: 12px;
-}
+    .control-container-item.gutters {
+        padding-left: 12px;
+        padding-right: 12px;
+        white-space: nowrap
+    }
 
 .control-icon-first {
     float: right;
